--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-screens": "^2.8.0",
     "react-native-tab-view": "^2.14.2",
     "react-native-vector-icons": "^6.6.0",
+    "react-number-format": "^4.4.1",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0"
